<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MenuSettings">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/black"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />


    <View
        android:id="@+id/option_update"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option_update"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_update"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/option_update"
        app:layout_constraintEnd_toEndOf="@+id/option_update"
        app:layout_constraintStart_toStartOf="@+id/option_update"
        app:layout_constraintTop_toTopOf="@+id/option_update" />

    <View
        android:id="@+id/option_UX"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_update" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/option_ux"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/option_UX"
        app:layout_constraintStart_toStartOf="@+id/option_UX"
        app:layout_constraintTop_toTopOf="@+id/option_UX" />

    <View
        android:id="@+id/option_language"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_UX" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/option_lang"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/option_language"
        app:layout_constraintStart_toStartOf="@+id/option_language"
        app:layout_constraintTop_toTopOf="@+id/option_language" />

    <View
        android:id="@+id/option_noti"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_language" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/option_notification"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/option_noti"
        app:layout_constraintStart_toStartOf="@+id/option_noti"
        app:layout_constraintTop_toTopOf="@+id/option_noti" />


    <View
        android:id="@+id/option_help"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_noti" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/option_help"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/option_help"
        app:layout_constraintStart_toStartOf="@+id/option_help"
        app:layout_constraintTop_toTopOf="@+id/option_help" />


    <View
        android:id="@+id/option_infor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/menu_settings_option"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_help" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/lbl_thongtin"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="@+id/option_infor"
        app:layout_constraintStart_toStartOf="@+id/option_infor"
        app:layout_constraintTop_toTopOf="@+id/option_infor" />

</androidx.constraintlayout.widget.ConstraintLayout>